[gd_scene load_steps=5 format=3 uid="uid://c6eoa875k0hg4"]

[ext_resource type="PackedScene" uid="uid://hlujelco7ysk" path="res://models/props/raw/Edited_locker_2.tscn" id="1_05rrv"]
[ext_resource type="Script" uid="uid://cwci5fet5cknh" path="res://models/props/pr_locker.gd" id="1_pxrge"]
[ext_resource type="PackedScene" uid="uid://dm5oigd4i76y1" path="res://blueprints/Interactions/lockers/locker_interactable.tscn" id="2_2shww"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wh07e"]
size = Vector3(1.125946, 2.9711914, 2.0668945)

[node name="PR_Locker" type="Node3D"]
script = ExtResource("1_pxrge")

[node name="Locker2" parent="." instance=ExtResource("1_05rrv")]

[node name="EnterLoc" type="RayCast3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 1.5, 0, 0)
enabled = false

[node name="ExitLoc" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.096352905, 0, 0)
enabled = false

[node name="Interactable" parent="." instance=ExtResource("2_2shww")]
interact_name = "Hide in Locker"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0096588135, 1.405643, -0.0017089844)
shape = SubResource("BoxShape3D_wh07e")
